--- a/src/styles/Sidebar.css
+++ b/src/styles/Sidebar.css
@@ -1,21 +1,7 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    position: relative;
-    display: flex;
-    flex: 0 0 10%;
-    min-height: 100vh;
-    width: 100%;
-    overflow: hidden;
-}
 
 .sidebar {
-    position: fixed;
-    z-index: 1;
+    position: absolute;
+    z-index: -1;
     top: 0;
     left: 0;
     height: 98vh;
@@ -30,6 +16,7 @@ body {
 .sidebar.expanded {
     width: 160px;
 }
+
 
 .logo {
     display: block;
